// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should render 1`] = `
<div
  className="search-bar"
>
  <SearchInput
    count={0}
    expanded={false}
    handleClose={[Function]}
    handleNext={[Function]}
    handlePrev={[Function]}
    hasPrefix={false}
    isLoading={false}
    modifiers={
      Object {
        "get": [MockFunction],
        "toJS": [Function],
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onHistoryScroll={[Function]}
    onKeyDown={[Function]}
    onToggleSearchModifier={[Function]}
    placeholder="Find in file…"
    query=""
    selectedItemId=""
    shouldFocus={false}
    showClose={true}
    showErrorEmoji={false}
    showSearchModifiers={true}
    size=""
    summaryMsg=""
  />
</div>
`;

exports[`doSearch should complete a search 1`] = `"query"`;

exports[`showErrorEmoji false if no query + no results 1`] = `
<div
  className="search-bar"
>
  <SearchInput
    count={0}
    expanded={false}
    handleClose={[Function]}
    handleNext={[Function]}
    handlePrev={[Function]}
    hasPrefix={false}
    isLoading={false}
    modifiers={
      Object {
        "get": [MockFunction],
        "toJS": [Function],
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onHistoryScroll={[Function]}
    onKeyDown={[Function]}
    onToggleSearchModifier={[Function]}
    placeholder="Find in file…"
    query=""
    selectedItemId=""
    shouldFocus={false}
    showClose={true}
    showErrorEmoji={false}
    showSearchModifiers={true}
    size=""
    summaryMsg=""
  />
</div>
`;

exports[`showErrorEmoji false if query + results 1`] = `
<div
  className="search-bar"
>
  <SearchInput
    count={10}
    expanded={false}
    handleClose={[Function]}
    handleNext={[Function]}
    handlePrev={[Function]}
    hasPrefix={false}
    isLoading={false}
    modifiers={
      Object {
        "get": [MockFunction],
        "toJS": [Function],
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onHistoryScroll={[Function]}
    onKeyDown={[Function]}
    onToggleSearchModifier={[Function]}
    placeholder="Find in file…"
    query="test"
    selectedItemId=""
    shouldFocus={false}
    showClose={true}
    showErrorEmoji={false}
    showSearchModifiers={true}
    size=""
    summaryMsg="NaN of 10 results"
  />
</div>
`;

exports[`showErrorEmoji true if query + no results 1`] = `
<div
  className="search-bar"
>
  <SearchInput
    count={0}
    expanded={false}
    handleClose={[Function]}
    handleNext={[Function]}
    handlePrev={[Function]}
    hasPrefix={false}
    isLoading={false}
    modifiers={
      Object {
        "get": [MockFunction],
        "toJS": [Function],
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onHistoryScroll={[Function]}
    onKeyDown={[Function]}
    onToggleSearchModifier={[Function]}
    placeholder="Find in file…"
    query="test"
    selectedItemId=""
    shouldFocus={false}
    showClose={true}
    showErrorEmoji={true}
    showSearchModifiers={true}
    size=""
    summaryMsg="No results found"
  />
</div>
`;
